<resources>
    <string name="app_name">Excuser</string>
    <string name="select">Select a category</string>
    <string name="categories">Categories</string>

    <string name="office">Office</string>
    <string name="funny">Funny</string>
    <string name="college">College</string>
    <string name="party">Party</string>
    <string name="family">Family</string>
    <string name="gaming">Gaming</string>
    <string name="children">Children</string>
    <string name="unbelievable">Unbelievable</string>

    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="another">Another excuse</string>
    <string name="no_connection">No connection</string>
    <string name="url">Source: https://excuser-three.vercel.app/</string>

    <string name="language">Language</string>
    <string name="current_language">eng</string>
    <string name="tr">Turkish</string>
    <string name="eng">English</string>
    <string name="fren">French</string>
    <string name="hin">Hindi</string>
    <string name="pt_br">Brazilian Portuguese</string>
    <string name="ben">Bengali</string>
    <string name="language_changed">Language changed</string>
</resources>