<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:paddingVertical="10sp"
    android:layout_marginHorizontal="40sp"
    android:layout_gravity="center">

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbEng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eng" />

        <RadioButton
            android:id="@+id/rbTur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tr" />
        <RadioButton
            android:id="@+id/rbFrench"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fren" />
        <RadioButton
            android:id="@+id/rbHin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hin" />
        <RadioButton
            android:id="@+id/rbPtbr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pt_br" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ben" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/rgLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>